# LTX-Desktop

./: .cursorignore  .dockerignore  .gitignore  .npmrc  AGENTS.md  INSTALLER.md  NOTICES.md  README.md  RELEASING.md  VIBE_CODING_PROCESS.md  electron-builder.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.json  tailwind.config.js  tsconfig.json  vite.config.ts
ltx-video/backend/: _fastapi_app.py  _models.py  api_types.py  app_factory.py  app_handler.py  architecture.md  flask_app.py  generate_api_docs.py  install_sageattention.bat  ltx2_server.py  main.py  pyproject.toml  pyrightconfig.json  simple_server.py
ltx-video/backend/_routes/: _errors.py  generation.py  health.py  ic_lora.py  image_gen.py  models.py  prompt.py  retake.py  settings.py  upscale.py
ltx-video/backend/_services/: flux_manager.py  image_generation.py  model_download.py  pipeline_manager.py  text_encoding.py  video_generation.py
ltx-video/backend/handlers/: __init__.py  _settings_utils.py  base.py  download_handler.py  generation_handler.py  health_handler.py  ic_lora_handler.py  image_generation_handler.py  models_handler.py  pipelines_handler.py  prompt_handler.py  retake_handler.py  settings_handler.py  text_handler.py  video_generation_handler.py
ltx-video/backend/inference/: __init__.py  config.py  models.py  pipeline.py
ltx-video/backend/runtime_config/: model_download_specs.py  prompt_texts.py  runtime_config.py
ltx-video/backend/server_utils/: model_layout_migration.py
ltx-video/backend/services/: __init__.py  interfaces.py  ltx_pipeline_common.py  services_utils.py
ltx-video/backend/services/fast_native_video_pipeline/: fast_native_video_pipeline.py  ltx_fast_native_video_pipeline.py
ltx-video/backend/services/fast_video_pipeline/: __init__.py  fast_video_pipeline.py  ltx_fast_video_pipeline.py
ltx-video/backend/services/flux_api_client/: flux_api_client.py  flux_api_client_impl.py
ltx-video/backend/services/gpu_cleaner/: __init__.py  torch_cleaner.py
ltx-video/backend/services/gpu_info/: __init__.py  gpu_info.py  gpu_info_impl.py
ltx-video/backend/services/http_client/: http_client.py  http_client_impl.py
ltx-video/backend/services/ic_lora_model_downloader/: ic_lora_model_downloader_impl.py
ltx-video/backend/services/ic_lora_pipeline/: __init__.py  ic_lora_pipeline.py  ltx_ic_lora_pipeline.py
ltx-video/backend/services/image_generation_pipeline/: __init__.py  flux_image_generation_pipeline.py
ltx-video/backend/services/ltx_api_client/: __init__.py  ltx_api_client.py  (+1 more)
ltx-video/backend/state/: app_settings.py  app_state_types.py  deps.py
ltx-video/backend/tests/: conftest.py  test_api_calls.py  test_generation.py  test_health.py  test_ic_lora.py  test_logging_policy.py  test_ltx_api_client.py  test_model_download_specs.py  test_models.py  test_no_mock_usage.py  test_response_models.py  test_settings.py  test_state_actions.py
(+340 files in other folders)
